# applescript.py

./: .travis.yml  README.md  setup.cfg
applescript/: __init__.py  tell.py
tests/applescript/examples/: stderr.py  stdout.py
tests/applescript/examples/tell/: app.py
