[metadata]
name = applescript
version = 0.0.1
url = https://github.com/looking-for-a-job/applescript.py
classifiers = file: classifiers.txt
description = run applescript
long_description = file: README.md
long_description_content_type = text/markdown
keywords = applescript

[options]
install_requires = 
	only
	public
	runcmd
	setuptools
	temp
packages = 
	applescript
